--- a/app/views/homes/faq.html.erb
+++ b/app/views/homes/faq.html.erb
@@ -3,6 +3,7 @@
 <ul>
   <li><a href="http://www.ecigtalk.ru/forum/f14/t3366.html">Электронная сигарета – как работает? Какую выбрать?</a></li>
   <li><a href="http://www.ecigtalk.ru/forum/f14/t22.html">ecigtalk.ru FAQ</a></li>
+  <li><a href="http://www.ecigtalk.ru/forum/f14/t7278.html">eGo-T FAQ</a></li>
   <li><a href="#guaranty"><%= t(:guaranty) %></a></li>
 </ul>
 
