--- a/app/views/homes/delivery.html.erb
+++ b/app/views/homes/delivery.html.erb
@@ -3,8 +3,7 @@
 <p>Мы осуществляем доставку только по Кишиневу. Могу выслать почтой, только надо придумать как деньги передать.</p>
 <p>Время доставки: 10:00 - 18:00.<br />
   Стоимость доставки: <%= Order.delivery_cost %> лей</p>
-<p>Мы заранее с вами свяжемся и договоримся о времени, но если вы уверены что сможете принять посылку, укажите в примичании к заказу, что вы будете на месте.</p>
 <p>Вы так-же можете сами забрать заказ: <%= link_to 'куда ехать', contacts_home_path %>.</p>
 
 <h3><%= I18n.t(:payment) %></h3>
-<p>Оплата осуществляется при получении посылки.</p>
+<p>Оплата осуществляется при получении товара.</p>
