--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% if is_admin? %>
-  <%= link_to "Add a new product", new_product_path %> <%= link_to "Show Discontinued", :discontinued => true %>
+  <%= link_to "Add a new product", new_product_path %> <%= link_to "Show discontinued", :discontinued => true %>
 <% end %>
 
 <div id="product-list">
