--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -44,7 +44,7 @@
     <%= f.fields_for :variations do |ff| %>
       <% product = ff.object %>
       <li>
-        Title: <%= ff.text_field :title %> Quantity: <%= ff.text_field :quantity, :size => 4 %>
+        Title: <%= ff.text_field :title %> Price: <%= ff.text_field :price, :size => 4 %> Quantity: <%= ff.text_field :quantity, :size => 4 %>
         <% if product.new_record? %>
           <%= ff.hidden_field :product_id, :value => 0 %>
         <% end %>
