--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,6 +22,9 @@
   <p><%= label :product, :is_discontinued %>
     <%= f.check_box :is_discontinued %></p>
 
+  <p><%= label :product, :is_producible %>
+    <%= f.check_box :is_producible %></p>
+
   <h3>Assets</h3>
   <ul class="asset-list">
     <%= f.fields_for :assets do |ff| %>
