remove products.is_primary

--- a/app/views/products/_mixture.html.erb
+++ b/app/views/products/_mixture.html.erb
@@ -1,17 +1,8 @@
 <div class="mixture-options">
-  <!-- <%= f.fields_for :mixture, Order.new do |ff| %> -->
-  <!--   <% @product.variations.each do |product| %> -->
-  <!--     <p><%= h(product.title) %> -->
-  <!--       <%= ff.fields_for :order_lines, OrderLine.new do |fff| %> -->
-  <!--         <%= fff.select(:product_id, product.variations.map { |p| [p.title, p.id] }) %> -->
-  <!--     <% end %></p> -->
-  <!--   <% end %> -->
-  <!-- <% end %> -->
-
   <%= f.fields_for :order_lines, OrderLine.new do |ff| %>
     <% @product.variations.each do |product| %>
       <p><%= h(product.title) %>
-        <%= ff.select(:product_ids, product.variations.map { |p| [p.title, p.id] }, {}, :name => "order[order_lines_attributes][0][product_ids][]") %>
+        <%= ff.select(:product_ids, product.variations.map { |p| [p.title + (p.price.present? && p.price > 0 ? " + #{local_price(p.price, true)}" : ""), p.id] }, {}, :name => "order[order_lines_attributes][0][product_ids][]") %>
       </p>
     <% end %>
     <br />
