--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,8 +5,11 @@
   <h2><%= yield(:title) %></h2>
   <%= form_for @cart, :url => cart_path, :html => {:method => :put} do |f| %>
   <ul>
-    <% if is_admin? %>
-      <li><%= link_to "Edit", edit_product_path(@product) %></li>
+    <% if is_admin? || @product.product %>
+      <li>
+        <%= link_to_if is_admin?, "Edit", edit_product_path(@product) %>
+        <%= link_to_if @product.product, 'Root', @product.root %>
+      </li>
     <% end %>
     <% if @product.tags.present? %>
       <li><%= t(:similar_products) %>: <%= tags_links(@product) %></li>
@@ -51,7 +54,7 @@
   <div class="description">
     <h3 class="slight-visiable"><%= t(:product_description) %></h3>
     <% if @product.kind_of?(Mixture) %>
-      <% @product.primary_set.each do |p| %>
+      <% @product.products.each do |p| %>
         <br /><%= h(p.variation_crumb) %>
       <% end %>
     <% end %>
