--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -54,6 +54,7 @@
         <p><small>
             <% unless product.new_record? %>
               Delete? <%= ff.check_box :_destroy %>
+              <%= label :product, :is_default %>? <%= ff.check_box :is_default %>
               <%= link_to "Edit", edit_product_path(product) %>
             <% end %>
           </small></p>
