--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,9 @@
     <% end %>
     <% unless @product.has_variations? %>
       <% if @product.in_stock? %>
-        <li><%= t(:available) %>: <%= @product.quantity %></li>
+        <% unless @product.is_producible? %>
+          <li><%= t(:available) %>: <%= @product.quantity %></li>
+        <% end %>
         <li>
           <%= f.fields_for :order_lines, OrderLine.new do |ff| %>
             <%= ff.hidden_field :product_id, :value => @product.id %>
