--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,9 @@
 <% end %>
 
 <% if is_admin? %>
-  <%= link_to "Add a new product", new_product_path %> <%= link_to "Show discontinued", :discontinued => true %>
+  <div class="edit-add-links">
+    <%= link_to "Add a new product", new_product_path %> <%= link_to "Show discontinued", :discontinued => true %> <%= link_to "Wiki pages", wiki_pages_path %>
+  </div>
 <% end %>
 
 <div id="product-list">
