--- a/app/views/wiki_pages/show.html.erb
+++ b/app/views/wiki_pages/show.html.erb
@@ -1,10 +1,14 @@
-<% title(h(@wiki_page.title), false) %>
+<% title(h(@wiki_page.title)) %>
 
 <div id="wiki">
-  <h2><%= h(@wiki_page.title) %></h2>
-
   <% if is_admin? %>
-    <%= link_to "Back to wiki_pages#index", wiki_pages_path %> <%= link_to "Edit", edit_wiki_page_path(@wiki_page) %>
+    <div class="edit-add-links">
+      <%= link_to "Back to Wiki pages", wiki_pages_path %> <%= link_to "Edit", edit_wiki_page_path(@wiki_page) %>
+    </div>
+
+    <% unless @wiki_page.is_visible? %>
+      <div class="notice">The page is not visible.</div>
+    <% end %>
   <% end %>
 
   <div class="markup">
