use checkox if mixture comp. is not a list of variations; some style changes

--- a/app/views/products/_mixture.html.erb
+++ b/app/views/products/_mixture.html.erb
@@ -1,10 +1,15 @@
-<div class="mixture-options">
+<div id="mixture-options">
   <%= f.fields_for :order_lines, OrderLine.new do |ff| %>
     <% @product.variations.each do |product| %>
-      <% default = product.variations.detect { |v| v.is_default? } %>
-      <p><%= h(product.title) %>
-        <%= ff.select(:product_ids, product.variations.map { |p| [p.title + (p.price.present? && p.price > 0 ? " + #{local_price(p.price, true)}" : ""), p.id] }, {:selected => default ? default.id : nil}, :name => "order[order_lines_attributes][0][product_ids][]") %>
-      </p>
+      <div class="comp">
+        <span class="title"><%= h(product.title) %></span>:
+        <% if product.has_variations? %>
+          <% default = product.variations.detect { |v| v.is_default? } %>
+          <%= ff.select(:product_ids, product.variations.map { |p| [p.title + (p.price.present? && p.price > 0 ? " + #{local_price(p.price, true)}" : ""), p.id] }, {:selected => default ? default.id : nil}, :name => "order[order_lines_attributes][0][product_ids][]") %>
+        <% else %>
+          <input name="order[order_lines_attributes][0][product_ids][]" type="checkbox" value="<%= product.id %>" /> <%= product.price > 0 ? "(+ #{local_price(product.price, true)})" : "" %>
+        <% end %>
+      </div>
     <% end %>
     <br />
     <%= ff.text_field :quantity, :size => 4, :value => 1 %>
