--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>ecigs.md - <%= content_for?(:title) ? yield(:title) : "электронные сигареты, жидкость в Молдове" %></title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :all %>
+  <%= stylesheet_link_tag :all, :cache => true %>
+  <%= javascript_include_tag :all, :cache => true %>
   <%= csrf_meta_tag %>
 
   <!-- <link rel="icon" href="/images/favicon.png" sizes="32x32" />
