add stationary phone number

--- a/app/views/homes/contacts.html.erb
+++ b/app/views/homes/contacts.html.erb
@@ -2,7 +2,8 @@
 
 <ul>
   <li>vr.zdor@gmail.com</li>
-  <li>79014664</li>
+  <li>Тел.: 842753</li>
+  <li>Moldcell: 79014664</li>
 </ul>
 
 <p>Заказ можно забрать по адресу: Кишинев, Молдова, ул. Онисифор Гибу 2. <strong>Пожалуйста, напишите или позвоните перед тем как ехать</strong>. Магазин работает по будням с 10:00 до 18:00.</p>
