--- a/app/views/homes/contacts.html.erb
+++ b/app/views/homes/contacts.html.erb
@@ -1,7 +1,7 @@
 <% title(I18n.t(:contacts)) %>
 
 <ul>
-  <li>vr.zdor@gmail.com</li>
+  <li><%= mail_to 'vr.zdor@gmail.com', nil, :style => "text-decoration: none;" %></li>
   <li>Тел.: 842753</li>
   <li>Moldcell: 79014664</li>
 </ul>
