add star rating

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,14 @@
-<div class="comment">
+<div id="comment-<%= comment.id %>" class="comment">
   <div class="meta">
-    <strong>Автор:</strong> <%= comment.user.fullname %>, <%= comment.created_at.short %>
-    <% if is_admin? %>
-      <p><%= link_to "Edit", edit_admin_comment_path(comment) %> <%= link_to "Delete", admin_comment_path(comment), :method => :delete, :confirm => "Are you sure?" %></p>
+    <div class="who">Автор: <b><%= comment.user.fullname %></b>, <%= comment.created_at.short_date %></div>
+    <% if comment.score > 0 %>
+      <div class="stars">Оценка: <%= show_stars(comment.score) %></div>
     <% end %>
   </div>
   <div class="body">
     <%= comment.content %>
   </div>
+  <% if is_admin? %>
+    <p><%= link_to "Edit", edit_admin_comment_path(comment) %> <%= link_to "Delete", admin_comment_path(comment), :method => :delete, :confirm => "Are you sure?" %></p>
+  <% end %>
 </div>
