use the same comment partial on the Admin

--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,7 +1,7 @@
 <% admin_title 'Отзывы' %>
 
 <div id="comments">
-  <%= render :partial => "comment", :collection => @comments %>
+  <%= render :partial => "/comments/comment", :collection => @comments %>
 </div>
 <%= paginate @comments %>
 <br />
