--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div id="comment-<%= comment.id %>" class="comment">
   <div class="meta">
-    <div class="who">Автор: <b><%= comment.user.fullname %></b>, <%= comment.created_at.short_date %></div>
+    <div class="who">Автор: <b><%= comment.user.fullname %></b>, <%= comment.created_at.short_date %> <%= link_to '#', comment.commentable %></div>
     <% if comment.score > 0 %>
       <div class="stars">Оценка: <%= show_stars(comment.score) %></div>
     <% end %>
@@ -8,6 +8,7 @@
   <div class="body">
     <%= comment.content %>
   </div>
+
   <% if is_admin? %>
     <p><%= link_to "Edit", edit_admin_comment_path(comment) %> <%= link_to "Delete", admin_comment_path(comment), :method => :delete, :confirm => "Are you sure?" %></p>
   <% end %>
