--- a/app/views/admin/comments/edit.html.erb
+++ b/app/views/admin/comments/edit.html.erb
@@ -1,10 +1,8 @@
 <% admin_title "Edit comment" %>
 
-<p style="margin-bottom: 10px;"><%= link_to @comment.commentable.title, commentable_path(@comment) %></p>
-
 <div id="edit-comment">
   <%= form_for @comment, :url => admin_comment_path(@comment) do |f| %>
     <p><%= f.text_area :content, :size => "80x10", :style => "width: 100%" %></p>
-    <%= submit_tag "Update" %>
+    <%= submit_tag "Update" %> <%= link_to 'Back', commentable_path(@comment), :title => @comment.commentable.title %>
   <% end %>
 </div>
