--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,12 +2,14 @@
   <h3>Оставить отзыв</h3>
   <div id="errors-for-comment" class="notice" style="display: none;"></div>
   <%= form_for [commentable, Comment.new_by(current_user)], :remote => true do |f| %>
-    <p>Имя: <br />
-      <%= f.text_field :fullname, :style => "width: 100%" %></p>
-    <%= f.hidden_field :score %>
-    Оценка: <%= star_select(:comment_score) %>
-    <p>Комментарий:<br />
-      <%= f.text_area :content, :size => "80x10", :style => "width: 100%" %></p>
-    <%= submit_tag "Добавить" %>
+    <fieldset>
+      <p>Имя: <br />
+        <%= f.text_field :fullname, :style => "width: 100%" %></p>
+      <%= f.hidden_field :score %>
+      Оценка: <%= star_select(:comment_score) %>
+      <p>Комментарий:<br />
+        <%= f.text_area :content, :size => "80x10", :style => "width: 100%" %></p>
+      <%= submit_tag "Отправить", :class => "button" %>
+    </fieldset>
   <% end %>
 </div>
