--- a/public/stylesheets/rating.css
+++ b/public/stylesheets/rating.css
@@ -1,3 +1,7 @@
+/*
+* Style by Rogie http://www.komodomedia.com/blog/2007/01/css-star-rating-redux/
+*/
+
 .rating,
 .rating a:hover,
 .rating a:active,
